P&A + Factorio Extended Compatibility

--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -38,6 +38,10 @@ se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 width
 se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 height
 se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 width
 
+# Power And Armour
+
+# Factorio Extended Equipment
+
 # Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour MK3 height
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour MK3 width
@@ -102,10 +106,12 @@ se-thruster-suit-2-grid-size-w="SE's" Space Suit 2 Width\nMin:0\nMax:45\nBase De
 se-thruster-suit-3-grid-size-h="SE's" Space Suit 3 Height\nMin:0\nMax:60\nBase Default:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 se-thruster-suit-3-grid-size-w="SE's" Space Suit 3 Width\nMin:0\nMax:60\nBase Default:10\nMod Default:45\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:500\nBase Default::12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:500\nBase Default:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-4-grid-size-h="SE's" Space Suit 4 Height\nMin:0\nMax:400\nBase Default::12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+se-thruster-suit-4-grid-size-w="SE's" Space Suit 4 Width\nMin:0\nMax:400\nBase Default:12\nMod Default:60\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-# Power And Armour (yet to come)
+# Power And Armour
+
+# Factorio Extended Equipment
 
 # Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 Height\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
