--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -38,6 +38,10 @@ se-thruster-suit-3-grid-size-w="SE's" Rom Drakt 3 Bredde
 se-thruster-suit-4-grid-size-h="SE's" Rom Drakt 4 Høyde
 se-thruster-suit-4-grid-size-w="SE's" Rom Drakt 4 Bredde
 
+# Power And Armour
+
+# Factorio Extended Equipment
+
 # Rampant Arsenal
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning MK3 Høyde
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning MK3 Bredde
@@ -54,66 +58,68 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning
 [mod-setting-description]
 
 # Vanilla Armour's
-modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+modular-armor-grid-size-h=Modulær Rustnings Rutenett Høyde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+modular-armor-grid-size-w=Modulær Rustnings Rutenett Bredde\nMin:0\nMaks:10\nSpillets Normal:5\nModden's Normal:5\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-power-armor-grid-size-h= Elektrisk Rustnings Rutenett Høyde\nMin:0\nMaks:20\nSpillets Normal:7\nModden's Normal:10\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-power-armor-grid-size-w= Elektrisk Rustnings Rutenett Bredde\nMin:0\nMaks:20\nSpillets Normal:7\nModden's Normal:10\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-grid-size-h= Elektrisk Rustnings Rutenett Høyde\nMin:0\nMaks:20\nSpillets Normal:7\nModden's Normal:10\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+power-armor-grid-size-w= Elektrisk Rustnings Rutenett Bredde\nMin:0\nMaks:20\nSpillets Normal:7\nModden's Normal:10\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Normal:10\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Normal:10\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-mk2-grid-size-h=Elektrisk Rustning mk2 Rutenett Høyde\nMin:0\nMaks:40\nSpillets Normal:10\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+power-armor-mk2-grid-size-w=Elektrisk Rustning mk2 Rutenett Bredde\nMin:0\nMaks:40\nSpillets Normal:10\nModden's Normal:20\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Bob's Armour's
-bob-power-armor-mk3-grid-size-h="Bob's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-bob-power-armor-mk3-grid-size-w="Bob's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+bob-power-armor-mk3-grid-size-h="Bob's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+bob-power-armor-mk3-grid-size-w="Bob's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Noraml:12\nModden's Normal:35\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-bob-power-armor-mk4-grid-size-h="Bob's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:55\nSpillets Noraml:14\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-bob-power-armor-mk4-grid-size-w="Bob's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:55\nSpillets Noraml:14\nModden's Normal:45\n[color=red] Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsing save.[/color]
+bob-power-armor-mk4-grid-size-h="Bob's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:55\nSpillets Noraml:14\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+bob-power-armor-mk4-grid-size-w="Bob's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:55\nSpillets Noraml:14\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-bob-power-armor-mk5-grid-size-h="Bob's" Elektrisk Rustning MK5 Rutenett Høyde\nMin:0\nMaks:550\nSpillets Noraml:16\nModden's Normal:55\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-bob-power-armor-mk5-grid-size-w="Bob's" Elektrisk Rustning MK5 Rutenett Bredde\nMin:0\nMaks:550\nSpillets Noraml:16\nModden's Normal:55\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+bob-power-armor-mk5-grid-size-h="Bob's" Elektrisk Rustning MK5 Rutenett Høyde\nMin:0\nMaks:550\nSpillets Noraml:16\nModden's Normal:55\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+bob-power-armor-mk5-grid-size-w="Bob's" Elektrisk Rustning MK5 Rutenett Bredde\nMin:0\nMaks:550\nSpillets Noraml:16\nModden's Normal:55\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Power Armour mk3 
-pamk3-pmak3-grid-size-h="MK3's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:14\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-pamk3-pmak3-grid-size-w="MK3's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:30\nSpillets Noraml:14\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+pamk3-pmak3-grid-size-h="MK3's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:14\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+pamk3-pmak3-grid-size-w="MK3's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:30\nSpillets Noraml:14\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-pamk3-pmak4-grid-size-h="MK3's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Noraml:20\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-pamk3-pmak4-grid-size-w="MK3's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Noraml:20\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+pamk3-pmak4-grid-size-h="MK3's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:50\nSpillets Noraml:20\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+pamk3-pmak4-grid-size-w="MK3's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:50\nSpillets Noraml:20\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Krastorio 2
-mk3-armor-grid-size-h="K2's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-mk3-armor-grid-size-w="K2's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+mk3-armor-grid-size-h="K2's" Elektrisk Rustning MK3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+mk3-armor-grid-size-w="K2's" Elektrisk Rustning MK3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-mk4-armor-grid-size-h="K2's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+mk4-armor-grid-size-h="K2's" Elektrisk Rustning MK4 Rutenett Høyde\nMin:0\nMaks:400\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Rutenett Bredde\nMin:0\nMaks:400\nSpillets Noraml:12\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Space Exploration
-se-thruster-suit-grid-size-h="SE's" Rom Drakt 1 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-se-thruster-suit-grid-size-w="SE's" Rom Drakt 1 Rutenett Bredde\nMin:0\nMaks:30\Spillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+se-thruster-suit-grid-size-h="SE's" Rom Drakt 1 Rutenett Høyde\nMin:0\nMaks:30\nSpillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-grid-size-w="SE's" Rom Drakt 1 Rutenett Bredde\nMin:0\nMaks:30\Spillets Noraml:6\nModden's Normal:15\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-se-thruster-suit-2grid-size-h="SE's" Rom Drakt 2 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-se-thruster-suit-2grid-size-w="SE's" Rom Drakt 2 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+se-thruster-suit-2grid-size-h="SE's" Rom Drakt 2 Rutenett Høyde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-2grid-size-w="SE's" Rom Drakt 2 Rutenett Bredde\nMin:0\nMaks:45\nSpillets Noraml:8\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
  
-se-thruster-suit-3-grid-size-h="SE's" Rom Drakt 3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-se-thruster-suit-3-grid-size-w="SE's" Rom Drakt 3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+se-thruster-suit-3-grid-size-h="SE's" Rom Drakt 3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-3-grid-size-w="SE's" Rom Drakt 3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:10\nModden's Normal:45\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-se-thruster-suit-4-grid-size-h="SE's" Rom Drakt 4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-se-thruster-suit-4-grid-size-w="SE's" Rom Drakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+se-thruster-suit-4-grid-size-h="SE's" Rom Drakt 4 Rutenett Høyde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+se-thruster-suit-4-grid-size-w="SE's" Rom Drakt 4 Rutenett Bredde\nMin:0\nMaks:500\nSpillets Noraml:12\nModden's Normal:60\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-# Power And Armour (yet to come)
+# Power And Armour
+
+# Factorio Extended Equipment
 
 # Rampant Arsenal
-power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning Mk3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
-power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning Mk3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endring i et pågående spill[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning Mk3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
+power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning Mk3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn)
 # Disabled due to not loading have no idea way.
 
-#mk3-destroyer-grid-size-h="Custom's" Elektrisk Rustning MK3 Height\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endring i et pågående spill[/color]
-#mk3-destroyer-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endring i et pågående spill[/color]
+#mk3-destroyer-grid-size-h="Custom's" Elektrisk Rustning MK3 Height\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+#mk3-destroyer-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-#mk4-exterminator-grid-size-h="Custom's" Elektrisk Rustning MK4 Height\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endring i et pågående spill[/color]
-#mk4-exterminator-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endring i et pågående spill[/color]
+#mk4-exterminator-grid-size-h="Custom's" Elektrisk Rustning MK4 Height\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+#mk4-exterminator-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-#mk5-annihilator-grid-size-h="Custom's" Elektrisk Rustning MK5 Height\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endring i et pågående spill[/color]
-#mk5-annihilator-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endring i et pågående spill[/color]
+#mk5-annihilator-grid-size-h="Custom's" Elektrisk Rustning MK5 Height\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+#mk5-annihilator-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
