Attempted fix for Custom's armours

--- a/locale/en/mod-locale-settings-1.cfg
+++ b/locale/en/mod-locale-settings-1.cfg
@@ -47,13 +47,12 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour MK3 h
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour MK3 width
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn
-#mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 height
-#mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 width
-#mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 height
-#mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 width
-#mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 height
-#mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 width
-# Disabled due to not loading have no idea way.
+mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 height
+mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 width
+mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 height
+mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 width
+mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 height
+mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 width
 
 [mod-setting-description]
 
@@ -118,13 +117,11 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Power Armour Mk3 H
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Power Armour Mk3 Width\nMin:0\nMax:60\nBase Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn)
-# Disabled due to not loading have no idea way.
+custom-power-armor-mk3-grid-size-h="Custom's" Power Armour MK3 Height\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+custom-power-armor-mk3-grid-size-w="Custom's" Power Armour MK3 Width\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-#mk3-destroyer-grid-size-h="Custom's" Power Armour MK3 Height\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-#mk3-destroyer-grid-size-w="Custom's" Power Armour MK3 Width\nMin:0\nMax:40\nBase_Default:12\nMod Default:30\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+custom-power-armor-mk4-grid-size-h="Custom's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+custom-power-armor-mk4-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
 
-#mk4-exterminator-grid-size-h="Custom's" Power Armour MK4 Height\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-#mk4-exterminator-grid-size-w="Custom's" Power Armour MK4 Width\nMin:0\nMax:50\nBase Default:14\nMod Default:40\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-
-#mk5-annihilator-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:500\nBase Default:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
-#mk5-annihilator-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:500\nBase Default:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+custom-power-armor-mk5-grid-size-h="Custom's" Power Armour MK5 Height\nMin:0\nMax:500\nBase Default:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
+custom-power-armor-mk5-grid-size-w="Custom's" Power Armour MK5 Width\nMin:0\nMax:500\nBase Default:16\nMod Default:50\n[color=red]Warning!!! This Mod is not responsible for any equipment lost when reducing grid size on exsisting save.[/color]
