--- a/locale/no/mod-locales-settings-1.cfg
+++ b/locale/no/mod-locales-settings-1.cfg
@@ -29,14 +29,14 @@ mk4-armor-grid-size-h="K2's" Elektrisk Rustning MK4 Høyde
 mk4-armor-grid-size-w="K2's" Elektrisk Rustning MK4 Bredde
 
 # Space Exploration
-se-thruster-suit-grid-size-h="SE's" Rom Drakt 1 Høyde
-se-thruster-suit-grid-size-w="SE's" Rom Drakt 1 Bredde
-se-thruster-suit-2-grid-size-h="SE's" Rom Drakt 2 Høyde
-se-thruster-suit-2-grid-size-w="SE's" Rom Drakt 2 Bredde
-se-thruster-suit-3-grid-size-h="SE's" Rom Drakt 3 Høyde
-se-thruster-suit-3-grid-size-w="SE's" Rom Drakt 3 Bredde
-se-thruster-suit-4-grid-size-h="SE's" Rom Drakt 4 Høyde
-se-thruster-suit-4-grid-size-w="SE's" Rom Drakt 4 Bredde
+se-thruster-suit-grid-size-h="SE's" Romdrakt 1 Høyde
+se-thruster-suit-grid-size-w="SE's" Romdrakt 1 Bredde
+se-thruster-suit-2-grid-size-h="SE's" Romdrakt 2 Høyde
+se-thruster-suit-2-grid-size-w="SE's" Romdrakt 2 Bredde
+se-thruster-suit-3-grid-size-h="SE's" Romdrakt 3 Høyde
+se-thruster-suit-3-grid-size-w="SE's" Romdrakt 3 Bredde
+se-thruster-suit-4-grid-size-h="SE's" Romdrakt 4 Høyde
+se-thruster-suit-4-grid-size-w="SE's" Romdrakt 4 Bredde
 
 # Power And Armour
 
@@ -47,13 +47,12 @@ power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning MK3 Bredde
 
 # Custom Power Armour Fix/ (Custom Power Armour Reborn
-#mk3-destroyer-grid-size-h="Custom's" Elektrisk Rustning MK3 Høyde
-#mk3-destroyer-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde
-#mk4-exterminator-grid-size-h="Custom's" Elektrisk Rustning MK4 Høyde
-#mk4-exterminator-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde
-#mk5-annihilator-grid-size-h="Custom's" Elektrisk Rustning MK5 Høyde
-#mk5-annihilator-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde
-# Disabled due to not loading have no idea way.
+mk3-destroyer-grid-size-h="Custom's" Elektrisk Rustning MK3 Høyde
+mk3-destroyer-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde
+mk4-exterminator-grid-size-h="Custom's" Elektrisk Rustning MK4 Høyde
+mk4-exterminator-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde
+mk5-annihilator-grid-size-h="Custom's" Elektrisk Rustning MK5 Høyde
+mk5-annihilator-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde
 
 [mod-setting-description]
 
@@ -112,14 +111,12 @@ se-thruster-suit-4-grid-size-w="SE's" Rom Drakt 4 Rutenett Bredde\nMin:0\nMaks:5
 power-armor-mk3-armor-rampant-arsenal-grid-size-h="Arsenal's" Elektrisk Rustning Mk3 Rutenett Høyde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 power-armor-mk3-armor-rampant-arsenal-grid-size-w="Arsenal's" Elektrisk Rustning Mk3 Rutenett Bredde\nMin:0\nMaks:60\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for misted moduler om du gjør endringer i et pågående spill[/color]
 
-# Custom Power Armour Fix/ (Custom Power Armour Reborn)
-# Disabled due to not loading have no idea way.
+# Custom Power Armour Fix/ (Custom Power Armour Reborn)# Disabled due to not loading have no idea way.
+custom-power-armor-mk3-grid-size-h="Custom's" Elektrisk Rustning MK3 Height\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk3-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-#mk3-destroyer-grid-size-h="Custom's" Elektrisk Rustning MK3 Height\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-#mk3-destroyer-grid-size-w="Custom's" Elektrisk Rustning MK3 Bredde\nMin:0\nMax:40\nSpillets Noraml:12\nModden's Normal:30\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk4-grid-size-h="Custom's" Elektrisk Rustning MK4 Height\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk4-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
 
-#mk4-exterminator-grid-size-h="Custom's" Elektrisk Rustning MK4 Height\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-#mk4-exterminator-grid-size-w="Custom's" Elektrisk Rustning MK4 Bredde\nMin:0\nMax:50\nSpillets Noraml:14\nModden's Normal:40\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-
-#mk5-annihilator-grid-size-h="Custom's" Elektrisk Rustning MK5 Height\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
-#mk5-annihilator-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk5-grid-size-h="Custom's" Elektrisk Rustning MK5 Height\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
+custom-power-armor-mk5-grid-size-w="Custom's" Elektrisk Rustning MK5 Bredde\nMin:0\nMax:500\nSpillets Noraml:16\nModden's Normal:50\n[color=red]Advarsel!!! Denne modded er ikke ansvalig for mistet moduler om du gjør endringer i et pågående spill[/color]
